# money-app

./: AuthPage.qml  CMakeLists.txt  Main.qml  Page1.qml  Page2.qml  Page3.qml  PopUpCategories.qml  Screen01.ui.qml  main.cpp
